<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/img_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/avatar" />

        <ImageView
            android:id="@+id/img_delete_avatar"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:src="@drawable/cancel"
            android:tint="#ee797878"
            android:visibility="gone" />
    </RelativeLayout>


    <EditText
        android:id="@+id/et_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/name"
        android:textStyle="bold" />

    <EditText
        android:inputType="number"
        android:id="@+id/et_phone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/phone"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_buttom"
        android:gravity="center"
        android:text="@string/done" />
</LinearLayout>